// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fragment/Thematic/ActionForm will overide local data when in update mode 1`] = `
Object {
  "form": Object {
    "description": <p>Type your description here</p>,
    "position": "1",
    "site": "https://google.com",
    "tagline": "tagline",
  },
}
`;

exports[`fragment/Thematic/ActionForm will post data on failed and bring up an alert 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      class="pickr"
    >
      

        
      <button
        aria-label="toggle color picker dialog"
        class="pcr-button"
        role="button"
        type="button"
      />
      

        
      
      
    </div>
  </div>
  <div
    class="pickr"
  >
    

        
    <button
      aria-label="toggle color picker dialog"
      class="pcr-button"
      role="button"
      type="button"
    />
    

        
    
      
  </div>
  <div
    aria-label="color picker dialog"
    class="pcr-app"
    data-theme="nano"
    role="window"
  >
    
          
    <div
      class="pcr-selection"
    >
      
            
      <div
        class="pcr-color-preview"
      >
        
              
        <button
          aria-label="use previous color"
          class="pcr-last-color"
          type="button"
        />
        
              
        <div
          class="pcr-current-color"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-palette"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="color selection area"
          class="pcr-palette"
          role="listbox"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-chooser"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="hue selection slider"
          class="pcr-hue pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-opacity"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="selection slider"
          class="pcr-opacity pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      
          
    </div>
    

          
    <div
      class="pcr-swatches "
    >
      <button
        aria-label="color swatch"
        style="color: rgba(244, 67, 54, 1)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(233, 30, 99, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(156, 39, 176, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(103, 58, 183, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(63, 81, 181, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(33, 150, 243, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(3, 169, 244, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 188, 212, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 150, 136, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(76, 175, 80, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(139, 195, 74, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(205, 220, 57, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 235, 59, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 193, 7, 1)"
        type="button"
      />
    </div>
    

          
    <div
      class="pcr-interaction"
    >
      
            
      <input
        aria-label="color input field"
        class="pcr-result"
        spellcheck="false"
        type="text"
      />
      

            
      <input
        class="pcr-type active"
        data-type="HEXA"
        type="button"
        value="HEXA"
      />
      
            
      <input
        class="pcr-type"
        data-type="RGBA"
        type="button"
        value="RGBA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSLA"
        type="button"
        value="HSLA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSVA"
        type="button"
        value="HSVA"
      />
      
            
      <input
        class="pcr-type"
        data-type="CMYK"
        type="button"
        value="CMYK"
      />
      

            
      <input
        aria-label="save and close"
        class="pcr-save"
        type="button"
        value="Save"
      />
      
            
      <input
        aria-label="cancel and close"
        class="pcr-cancel"
        hidden=""
        style="display:none"
        type="button"
        value="Cancel"
      />
      
            
      <input
        aria-label="clear and close"
        class="pcr-clear"
        type="button"
        value="Clear"
      />
      
          
    </div>
    
        
  </div>
  <div
    aria-label="color picker dialog"
    class="pcr-app"
    data-theme="nano"
    role="window"
  >
    
          
    <div
      class="pcr-selection"
    >
      
            
      <div
        class="pcr-color-preview"
      >
        
              
        <button
          aria-label="use previous color"
          class="pcr-last-color"
          type="button"
        />
        
              
        <div
          class="pcr-current-color"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-palette"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="color selection area"
          class="pcr-palette"
          role="listbox"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-chooser"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="hue selection slider"
          class="pcr-hue pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-opacity"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="selection slider"
          class="pcr-opacity pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      
          
    </div>
    

          
    <div
      class="pcr-swatches "
    >
      <button
        aria-label="color swatch"
        style="color: rgba(244, 67, 54, 1)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(233, 30, 99, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(156, 39, 176, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(103, 58, 183, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(63, 81, 181, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(33, 150, 243, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(3, 169, 244, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 188, 212, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 150, 136, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(76, 175, 80, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(139, 195, 74, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(205, 220, 57, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 235, 59, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 193, 7, 1)"
        type="button"
      />
    </div>
    

          
    <div
      class="pcr-interaction"
    >
      
            
      <input
        aria-label="color input field"
        class="pcr-result"
        spellcheck="false"
        type="text"
      />
      

            
      <input
        class="pcr-type active"
        data-type="HEXA"
        type="button"
        value="HEXA"
      />
      
            
      <input
        class="pcr-type"
        data-type="RGBA"
        type="button"
        value="RGBA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSLA"
        type="button"
        value="HSLA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSVA"
        type="button"
        value="HSVA"
      />
      
            
      <input
        class="pcr-type"
        data-type="CMYK"
        type="button"
        value="CMYK"
      />
      

            
      <input
        aria-label="save and close"
        class="pcr-save"
        type="button"
        value="Save"
      />
      
            
      <input
        aria-label="cancel and close"
        class="pcr-cancel"
        hidden=""
        style="display:none"
        type="button"
        value="Cancel"
      />
      
            
      <input
        aria-label="clear and close"
        class="pcr-clear"
        type="button"
        value="Clear"
      />
      
          
    </div>
    
        
  </div>
  <div
    class="ss-alert-container"
    data-v-app=""
    id="plugin__12e5"
    role="alert"
  >
    
    <div
      class="ss-alert ss-alert--success slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-alert--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-alert--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-alert--content"
        >
          <label>
            cms.thematic-page.create.success
          </label>
        </div>
      </div>
    </div>
    <div
      class="ss-alert ss-alert--danger slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-alert--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-alert--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-alert--content"
        >
          <label>
            internal.error
          </label>
        </div>
      </div>
    </div>
    <div
      class="ss-alert ss-alert--danger slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-alert--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-alert--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-alert--content"
        >
          <label>
            internal.error
          </label>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`fragment/Thematic/ActionForm will post data on success and bring up an alert then redirect it to the list 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      class="pickr"
    >
      

        
      <button
        aria-label="toggle color picker dialog"
        class="pcr-button"
        role="button"
        type="button"
      />
      

        
      
      
    </div>
  </div>
  <div
    class="pickr"
  >
    

        
    <button
      aria-label="toggle color picker dialog"
      class="pcr-button"
      role="button"
      type="button"
    />
    

        
    
      
  </div>
  <div
    aria-label="color picker dialog"
    class="pcr-app"
    data-theme="nano"
    role="window"
  >
    
          
    <div
      class="pcr-selection"
    >
      
            
      <div
        class="pcr-color-preview"
      >
        
              
        <button
          aria-label="use previous color"
          class="pcr-last-color"
          type="button"
        />
        
              
        <div
          class="pcr-current-color"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-palette"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="color selection area"
          class="pcr-palette"
          role="listbox"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-chooser"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="hue selection slider"
          class="pcr-hue pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-opacity"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="selection slider"
          class="pcr-opacity pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      
          
    </div>
    

          
    <div
      class="pcr-swatches "
    >
      <button
        aria-label="color swatch"
        style="color: rgba(244, 67, 54, 1)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(233, 30, 99, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(156, 39, 176, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(103, 58, 183, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(63, 81, 181, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(33, 150, 243, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(3, 169, 244, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 188, 212, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 150, 136, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(76, 175, 80, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(139, 195, 74, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(205, 220, 57, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 235, 59, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 193, 7, 1)"
        type="button"
      />
    </div>
    

          
    <div
      class="pcr-interaction"
    >
      
            
      <input
        aria-label="color input field"
        class="pcr-result"
        spellcheck="false"
        type="text"
      />
      

            
      <input
        class="pcr-type active"
        data-type="HEXA"
        type="button"
        value="HEXA"
      />
      
            
      <input
        class="pcr-type"
        data-type="RGBA"
        type="button"
        value="RGBA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSLA"
        type="button"
        value="HSLA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSVA"
        type="button"
        value="HSVA"
      />
      
            
      <input
        class="pcr-type"
        data-type="CMYK"
        type="button"
        value="CMYK"
      />
      

            
      <input
        aria-label="save and close"
        class="pcr-save"
        type="button"
        value="Save"
      />
      
            
      <input
        aria-label="cancel and close"
        class="pcr-cancel"
        hidden=""
        style="display:none"
        type="button"
        value="Cancel"
      />
      
            
      <input
        aria-label="clear and close"
        class="pcr-clear"
        type="button"
        value="Clear"
      />
      
          
    </div>
    
        
  </div>
  <div
    aria-label="color picker dialog"
    class="pcr-app"
    data-theme="nano"
    role="window"
  >
    
          
    <div
      class="pcr-selection"
    >
      
            
      <div
        class="pcr-color-preview"
      >
        
              
        <button
          aria-label="use previous color"
          class="pcr-last-color"
          type="button"
        />
        
              
        <div
          class="pcr-current-color"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-palette"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="color selection area"
          class="pcr-palette"
          role="listbox"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-chooser"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="hue selection slider"
          class="pcr-hue pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      

            
      <div
        class="pcr-color-opacity"
      >
        
              
        <div
          class="pcr-picker"
        />
        
              
        <div
          aria-label="selection slider"
          class="pcr-opacity pcr-slider"
          role="slider"
          tabindex="0"
        />
        
            
      </div>
      
          
    </div>
    

          
    <div
      class="pcr-swatches "
    >
      <button
        aria-label="color swatch"
        style="color: rgba(244, 67, 54, 1)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(233, 30, 99, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(156, 39, 176, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(103, 58, 183, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(63, 81, 181, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(33, 150, 243, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(3, 169, 244, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 188, 212, 0.7)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(0, 150, 136, 0.75)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(76, 175, 80, 0.8)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(139, 195, 74, 0.85)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(205, 220, 57, 0.9)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 235, 59, 0.95)"
        type="button"
      />
      <button
        aria-label="color swatch"
        style="color: rgba(255, 193, 7, 1)"
        type="button"
      />
    </div>
    

          
    <div
      class="pcr-interaction"
    >
      
            
      <input
        aria-label="color input field"
        class="pcr-result"
        spellcheck="false"
        type="text"
      />
      

            
      <input
        class="pcr-type active"
        data-type="HEXA"
        type="button"
        value="HEXA"
      />
      
            
      <input
        class="pcr-type"
        data-type="RGBA"
        type="button"
        value="RGBA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSLA"
        type="button"
        value="HSLA"
      />
      
            
      <input
        class="pcr-type"
        data-type="HSVA"
        type="button"
        value="HSVA"
      />
      
            
      <input
        class="pcr-type"
        data-type="CMYK"
        type="button"
        value="CMYK"
      />
      

            
      <input
        aria-label="save and close"
        class="pcr-save"
        type="button"
        value="Save"
      />
      
            
      <input
        aria-label="cancel and close"
        class="pcr-cancel"
        hidden=""
        style="display:none"
        type="button"
        value="Cancel"
      />
      
            
      <input
        aria-label="clear and close"
        class="pcr-clear"
        type="button"
        value="Clear"
      />
      
          
    </div>
    
        
  </div>
  <div
    class="ss-alert-container"
    data-v-app=""
    id="plugin__12e5"
    role="alert"
  >
    
    <div
      class="ss-alert ss-alert--success slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-alert--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-alert--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-alert--content"
        >
          <label>
            cms.thematic-page.create.success
          </label>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`fragment/Thematic/ActionForm will render and match snapshot 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Content
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Thematic Name
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Thematic Name"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--input"
            reqiured=""
          >
            <!--v-if-->
            <input
              autocomplete="off"
              class="ss-input"
              placeholder="Header Text"
              reqiured=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <color-picker-stub />
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <color-picker-stub />
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Content
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Info
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Meta Title
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Meta title"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Path
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Path"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Footer
        </div>
        <div
          class="ss-form-control--wrapper col-3"
        >
          <div
            class="ss-control--input"
          >
            <div
              class="ss-select"
            >
              <div
                class="ss-select--button"
                tabindex="0"
              >
                <span
                  class="button-label"
                >
                  Please select
                </span>
                <span
                  class="button-icon"
                >
                  <svg
                    class="h-4"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
                style="display: none;"
              >
                <ul
                  class="dropdown-list"
                >
                  
                  <li
                    class="dropdown-item"
                  >
                    No
                  </li>
                  <li
                    class="dropdown-item"
                  >
                    Yes
                  </li>
                  
                </ul>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Image
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image Mobile
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image_mobile"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image_mobile"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Footer Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="footer_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="footer_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <!---->
        <div
          class="ss-form-control--wrapper col-offset-3"
        >
          <button
            class="ss-button ss-button--orange ss-button--base text-bold"
            type="submit"
          >
            <div
              class="ss-button--wrapper"
            >
              
              <div
                class="ss-button--icon"
              >
                <svg
                  class=""
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              
              
              <div
                class="ss-button--label has-icon"
              >
                
                Create
                
              </div>
              
            </div>
          </button>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  
</form>
`;

exports[`fragment/Thematic/ActionForm will render the spinner during the request process 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Content
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Thematic Name
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Thematic Name"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--input"
            reqiured=""
          >
            <!--v-if-->
            <input
              autocomplete="off"
              class="ss-input"
              placeholder="Header Text"
              reqiured=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <color-picker-stub />
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <color-picker-stub />
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Content
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Info
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Meta Title
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Meta title"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Path
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Path"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Footer
        </div>
        <div
          class="ss-form-control--wrapper col-3"
        >
          <div
            class="ss-control--input"
          >
            <div
              class="ss-select"
            >
              <div
                class="ss-select--button"
                tabindex="0"
              >
                <span
                  class="button-label"
                >
                  Please select
                </span>
                <span
                  class="button-icon"
                >
                  <svg
                    class="h-4"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
                style="display: none;"
              >
                <ul
                  class="dropdown-list"
                >
                  
                  <li
                    class="dropdown-item"
                  >
                    No
                  </li>
                  <li
                    class="dropdown-item"
                  >
                    Yes
                  </li>
                  
                </ul>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Image
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image Mobile
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image_mobile"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image_mobile"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Footer Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="footer_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="footer_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <!---->
        <div
          class="ss-form-control--wrapper col-offset-3"
        >
          <button
            class="ss-button ss-button--orange ss-button--base text-bold"
            disabled=""
            type="submit"
          >
            <div
              class="ss-button--wrapper"
            >
              
              <!--v-if-->
              
              
              <div
                class="ss-button--spinner"
              >
                <div
                  class="ss-spinner"
                  style="width: 20px; height: 20px;"
                >
                  <div />
                  <div />
                  <div />
                </div>
              </div>
              
            </div>
          </button>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  
</form>
`;

exports[`fragment/Thematic/ActionForm will render the text and color for the form update 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Content
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Thematic Name
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Thematic Name"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--input"
            reqiured=""
          >
            <!--v-if-->
            <input
              autocomplete="off"
              class="ss-input"
              placeholder="Header Text"
              reqiured=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <color-picker-stub />
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <color-picker-stub />
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Content
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Info
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Meta Title
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Meta title"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Path
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Path"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Footer
        </div>
        <div
          class="ss-form-control--wrapper col-3"
        >
          <div
            class="ss-control--input"
          >
            <div
              class="ss-select"
            >
              <div
                class="ss-select--button"
                tabindex="0"
              >
                <span
                  class="button-label"
                >
                  Please select
                </span>
                <span
                  class="button-icon"
                >
                  <svg
                    class="h-4"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
                style="display: none;"
              >
                <ul
                  class="dropdown-list"
                >
                  
                  <li
                    class="dropdown-item"
                  >
                    No
                  </li>
                  <li
                    class="dropdown-item"
                  >
                    Yes
                  </li>
                  
                </ul>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Image
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image Mobile
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image_mobile"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image_mobile"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Footer Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="footer_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="footer_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <!---->
        <div
          class="ss-form-control--wrapper col-offset-3"
        >
          <button
            class="ss-button ss-button--orange ss-button--base text-bold"
            type="submit"
          >
            <div
              class="ss-button--wrapper"
            >
              
              <div
                class="ss-button--icon"
              >
                <svg
                  class=""
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              
              
              <div
                class="ss-button--label has-icon"
              >
                
                Update
                
              </div>
              
            </div>
          </button>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  
</form>
`;

exports[`fragment/Thematic/ActionForm will render with error validation on all fields and match snapshot 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Content
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Thematic Name
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Thematic Name"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Thematic name is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--input"
            reqiured=""
          >
            <!--v-if-->
            <input
              autocomplete="off"
              class="ss-input"
              placeholder="Header Text"
              reqiured=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Header text is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Header Text Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="w-full relative"
          >
            <div
              id="plugin__12e5"
            />
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Description
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Description is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Description Color
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="w-full relative"
          >
            <div
              id="plugin__12e5"
            />
          </div>
          <!---->
        </div>
      </div>
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Content
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--textarea"
          >
            <textarea
              id="tiny-mce__12e4"
              visibility="hidden"
            />
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Custom content is required
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Info
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Meta Title
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Meta title"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Meta title is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Path
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            autofocus=""
            class="ss-control--input"
          >
            <!--v-if-->
            <input
              autocomplete="off"
              autofocus=""
              class="ss-input"
              placeholder="Path"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Path is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <div
          class="ss-form-control--label"
        >
          Custom Footer
        </div>
        <div
          class="ss-form-control--wrapper col-3"
        >
          <div
            class="ss-control--input"
          >
            <div
              class="ss-select"
            >
              <div
                class="ss-select--button"
                tabindex="0"
              >
                <span
                  class="button-label"
                >
                  No
                </span>
                <span
                  class="button-icon"
                >
                  <svg
                    class="h-4"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
                style="display: none;"
              >
                <ul
                  class="dropdown-list"
                >
                  
                  <li
                    class="dropdown-item"
                  >
                    No
                  </li>
                  <li
                    class="dropdown-item"
                  >
                    Yes
                  </li>
                  
                </ul>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="ss-section"
  >
    <div
      class="ss-section--title"
    >
      <h3>
        Thematic Page Image
      </h3>
    </div>
    <div
      class="ss-section--content"
    >
      
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Header image is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Header Image Mobile
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="header_image_mobile"
          >
            <input
              accept="image/png, image/jpeg"
              name="header_image_mobile"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Header image mobile is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control has-feedback"
      >
        <div
          class="ss-form-control--label"
        >
          Footer Image
        </div>
        <div
          class="ss-form-control--wrapper"
        >
          <div
            class="ss-control--file"
            name="footer_image"
          >
            <input
              accept="image/png, image/jpeg"
              name="footer_image"
              type="file"
            />
            <!--v-if-->
            
            <div
              class="file-hero"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                  fill="currentColor"
                />
              </svg>
              <label>
                Click or drag to upload
              </label>
            </div>
            
          </div>
          <div
            class="ss-control--info slide-top-enter-from slide-top-enter-active"
          >
            Footer image is required
          </div>
        </div>
      </div>
      <div
        class="ss-form-control"
      >
        <!---->
        <div
          class="ss-form-control--wrapper col-offset-3"
        >
          <button
            class="ss-button ss-button--orange ss-button--base text-bold"
            type="submit"
          >
            <div
              class="ss-button--wrapper"
            >
              
              <div
                class="ss-button--icon"
              >
                <svg
                  class=""
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              
              
              <div
                class="ss-button--label has-icon"
              >
                
                Create
                
              </div>
              
            </div>
          </button>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  
</form>
`;
